# tour_demo

./: .gitignore  README.md
agent-kit/: Package.swift
agent-kit/Sources/AgentKit/: EmitLoop.swift  OpenRouterReasoner.swift  Reasoner.swift  Schemas.swift
agent-kit/Tests/AgentKitTests/: AgentKitTests.swift
backend/: .gitignore  README.md  pyproject.toml
backend/src/tour_backend/: __init__.py  cli.py  config.py  image_store.py  models.py  repository.py  seed_data.py
backend/src/tour_backend/repositories/: __init__.py  memory.py  supabase.py
backend/supabase/: seed.sql
backend/supabase/migrations/: 0001_listings.sql  0002_listing_images.sql  0003_listing_ratings.sql
backend/tests/: conftest.py  test_cli.py  test_image_store.py  test_memory_repository.py  test_models.py
comparison-core/: Package.swift  README.md
comparison-core/Sources/ComparisonCLI/: main.swift
comparison-core/Sources/ComparisonCore/: FitScorer.swift  HomeRanking.swift
comparison-core/Tests/ComparisonCoreTests/: FitScorerTests.swift  (+1 more)
docs/: SOLUTION.md
event-log/: Package.swift  README.md
presentation/: README.md  index.html
tourDemoApp/tourDemoApp/: tourDemoAppApp.swift
tourDemoApp/tourDemoApp.xcodeproj/: project.pbxproj
tourDemoApp/tourDemoAppTests/: BuyerMemoryRecurrenceTests.swift  DebriefScoringTests.swift  PlanViewModelTests.swift  TodayViewModelTests.swift  TourStateTests.swift  tourDemoAppTests.swift
tourDemoApp/tourDemoAppUITests/: tourDemoAppUITests.swift  tourDemoAppUITestsLaunchTests.swift
voice-extraction/: Package.swift  README.md
(+130 files in other folders)
