[project]
name = "tour-backend"
version = "0.1.0"
description = "Listings backend for the Tour Debrief Companion demo — domain models, a repository abstraction, and a CLI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
# The real Supabase backend. Optional: the in-memory backend (default) needs none of this,
# so tests and the offline CLI run without it.
supabase = ["supabase>=2.4"]

[project.scripts]
tour-backend = "tour_backend.cli:app"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tour_backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
